# memory_slint

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs
src/: main.rs  memory.slint
