[package]
name = "memory_slint"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"          # small binaries for embedded
lto = true
strip = true
codegen-units = 1

[profile.dev]
opt-level = 1

[dependencies]
gpio-cdev = "0.6"
rand = "0.9.2"

[target.'cfg(not(any(target_arch = "arm", target_arch = "aarch64")))'.dependencies]
slint = { version = "1.14.1", default-features = true }

[target.armv7-unknown-linux-gnueabi.dependencies]      # soft float
slint = { version = "1.14.1", default-features = false, features = ["compat-1-2", "backend-linuxkms-noseat", "renderer-software"] }

[target.armv7-unknown-linux-gnueabihf.dependencies]    # hard float
slint = { version = "1.14.1", default-features = false, features = ["compat-1-2", "backend-linuxkms-noseat", "renderer-software"] }

[build-dependencies]
slint-build = "1.14.1"